# rust_blog_json

./: Cargo.toml  data.json
src/: lib.rs  main.rs
