[package]
name = "blog_json"
version = "0.1.0"
authors = ["Usman Saleem <usman@usmans.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.33"
chrono = "0.4"
tempfile = "3.1.0"